@@ -1,5 +1,9 @@
 2002-09-29  Masatake YAMATO  <yamato@redhat.com>
 
+	* autotrace.c (at_bitmap_read): If opts 
+	is null, give dummy to a handler.
+	(at_input_opts_copy): New function.
+
 	* configure.in: update library version.
 	LC_CURRENT=2, LT_REVISION=0, LT_AGE=0.
 
